# django_starter

./: .env.example  .gitignore  README.md  projectDB  pyproject.toml  requirements.txt
compose/local/django/: Dockerfile  start
config/: settings_manager.py  urls.py  urls_third_party.py  views.py
config/settings/: base.py  local.py  production.py  staging.py
public/staticfiles/assets/css/: custom.css
public/staticfiles/assets/js/: custom.js
templates/: base.html
templates/components/: scripts.html  styles.html
templates/pages/: index.html
utils/: generate_env.py
